--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Lista de Tareas</title>
 </head>
 
 <body>
-    <h1>SEGUNDA ENTREGA DE MI PROYECTO. </h1>
+    <div class="container mt-5">
+        <h1 class="mb-4">Lista de Tareas</h1>
+        <div class="input-group mb-3">
+            <input type="text" id="taskInput" class="form-control" placeholder="Nueva tarea...">
+            <button id="addButton" class="btn btn-primary">Agregar</button>
+        </div>
+        <ul id="taskList" class="list-group">
+        </ul>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
